Profile Link UPD

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@ body {
   --color-light-800: #F4F6FD;
   --color-light-850: #FDFDFD;
   --color-light-900: #FFFFFF;
+  --color-link-100: #1DA1F2;
   --shadow-light-100: 0px 12px 20px 0px rgba(184, 184, 184, 0.03), 0px 6px 12px 0px rgba(184, 184, 184, 0.02), 0px 2px 4px 0px rgba(184, 184, 184, 0.03);
   --shadow-light-200: 10px 10px 20px 0px rgba(218, 213, 213, 0.10);
   --shadow-light-300: -10px 10px 20px 0px rgba(218, 213, 213, 0.10);
